# CS540_Course_Project

./: .env.example  .gitignore  FUTURE_WORK.md  MISSING_DATASETS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt
data/pilots/: codegen_pilot10.jsonl  nice_pilot10.jsonl
data/processed/: humaneval_plus.jsonl  mbpp_plus.jsonl  nice_test.jsonl  nice_train.jsonl  re_elicitation_projects.jsonl  re_elicitation_projects_pure.jsonl
outputs/multi_agent/: codegen_cost_20260414_214727.json  codegen_solutions_pilot_20260414_214727.jsonl  full_codegen_cost_20260414_225018.json  full_codegen_solutions_20260414_225018.jsonl  mbpp_cost_20260418_000008.json  mbpp_solutions_20260418_000008.jsonl
reports/: ARCHITECTURE_DECISIONS.md  CODEGEN_RESULTS_MBPP.md  PROJECT_REPORT.md  PROMPT_OPTIMIZATION_PILOT.md  RESULTS.md  RE_ELICITATION_RESULTS.md  RE_ELICITATION_RESULTS_PURE.md
scripts/: evaluate_codegen.py  evaluate_pilot.py  evaluate_re_elicitation.py  evaluate_single_codegen.py  plot_results.py  prepare_codegen_data.py  prepare_datasets.py  prepare_nice_from_elicitation.py  prepare_re_classification_data.py  prepare_re_elicitation.py  prepare_re_elicitation_pure.py  prepare_re_nice_dataset.py  prepare_re_pure_dataset.py  run_bcb_detailed.py  run_bcb_single.py  run_codegen_full_dataset.py  run_codegen_multi_agent_v1.py  run_codegen_multi_agent_v2.py  run_codegen_single_agent.py  run_full.py  run_mbpp.py  run_pilot_multi.py  run_pilot_multi_v2.py  run_pilot_single.py  run_re_elicitation.py  run_single_agent_codegen.py
src/datasets/: splitter.py  (+5 more)
(+141 files in other folders)
